// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectCostBreakdownTable expect to render 1`] = `
<Fragment>
  <Component
    aria-label="Project cost breakdown"
    cells={
      Array [
        "",
        "",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "",
        },
      ]
    }
    rows={
      Array [
        Object {
          "cells": Array [
            "VMware maintenance",
            "VMware support costs (during migration)",
            "$6,000",
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <div>
                 
              </div>,
            },
            Object {
              "title": <div>
                 
              </div>,
            },
            Object {
              "title": <div>
                 
              </div>,
            },
          ],
        },
        Object {
          "cells": Array [
            "Red Hat Virtualization costs",
            "",
            "",
          ],
        },
        Object {
          "cells": Array [
            "",
            "RHV hypervisor subscriptions",
            "$6,000",
          ],
        },
        Object {
          "cells": Array [
            "",
            "RHV hypervisor growth subscriptions",
            "$15,000",
          ],
        },
        Object {
          "cells": Array [
            "Red Hat training and services",
            "",
            "",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Red Hat training",
            "$7,000",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Red Hat consulting",
            "$8,000",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Travel and lodging",
            "$9,000",
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <strong>
                Total
              </strong>,
            },
            "",
            Object {
              "title": <strong>
                $51,000
              </strong>,
            },
          ],
        },
      ]
    }
    variant="compact"
  >
    <TableBody />
  </Component>
</Fragment>
`;

exports[`ProjectCostBreakdownTable expect to render using null and undefined data 1`] = `
<Fragment>
  <Component
    aria-label="Project cost breakdown"
    cells={
      Array [
        "",
        "",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "",
        },
      ]
    }
    rows={
      Array [
        Object {
          "cells": Array [
            "VMware maintenance",
            "VMware support costs (during migration)",
            "Unknown",
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <div>
                 
              </div>,
            },
            Object {
              "title": <div>
                 
              </div>,
            },
            Object {
              "title": <div>
                 
              </div>,
            },
          ],
        },
        Object {
          "cells": Array [
            "Red Hat Virtualization costs",
            "",
            "",
          ],
        },
        Object {
          "cells": Array [
            "",
            "RHV hypervisor subscriptions",
            "Unknown",
          ],
        },
        Object {
          "cells": Array [
            "",
            "RHV hypervisor growth subscriptions",
            "Unknown",
          ],
        },
        Object {
          "cells": Array [
            "Red Hat training and services",
            "",
            "",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Red Hat training",
            "Unknown",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Red Hat consulting",
            "Unknown",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Travel and lodging",
            "Unknown",
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <strong>
                Total
              </strong>,
            },
            "",
            Object {
              "title": <strong>
                Unknown
              </strong>,
            },
          ],
        },
      ]
    }
    variant="compact"
  >
    <TableBody />
  </Component>
</Fragment>
`;

exports[`ProjectCostBreakdownTable expect to render using values equal to 0 1`] = `
<Fragment>
  <Component
    aria-label="Project cost breakdown"
    cells={
      Array [
        "",
        "",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "",
        },
      ]
    }
    rows={
      Array [
        Object {
          "cells": Array [
            "VMware maintenance",
            "VMware support costs (during migration)",
            "$0",
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <div>
                 
              </div>,
            },
            Object {
              "title": <div>
                 
              </div>,
            },
            Object {
              "title": <div>
                 
              </div>,
            },
          ],
        },
        Object {
          "cells": Array [
            "Red Hat Virtualization costs",
            "",
            "",
          ],
        },
        Object {
          "cells": Array [
            "",
            "RHV hypervisor subscriptions",
            "$0",
          ],
        },
        Object {
          "cells": Array [
            "",
            "RHV hypervisor growth subscriptions",
            "$0",
          ],
        },
        Object {
          "cells": Array [
            "Red Hat training and services",
            "",
            "",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Red Hat training",
            "$0",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Red Hat consulting",
            "$0",
          ],
        },
        Object {
          "cells": Array [
            "",
            "Travel and lodging",
            "$0",
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <strong>
                Total
              </strong>,
            },
            "",
            Object {
              "title": <strong>
                $0
              </strong>,
            },
          ],
        },
      ]
    }
    variant="compact"
  >
    <TableBody />
  </Component>
</Fragment>
`;
